# DocRun

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/pipeline/: camera_detector.py  diagnostic_agent.py  docling_parser.py  gemini_client.py  gemini_extractor.py  schemas.py  sensor_monitor.py  serial_reader.py
frontend/: app.js  index.html  styles.css
